--- a/composer.json
+++ b/composer.json
@@ -21,62 +21,62 @@
         "ext-mbstring": "*",
         "ext-gd": "*",
         "ext-xml": "*",
-        "symfony/symfony": "2.3.*",
-        "twig/twig": "<=1.16.0",
-        "doctrine/orm": "2.4.6",
-        "doctrine/doctrine-bundle": "1.2.0",
-        "doctrine/dbal": "2.4.*",
-        "doctrine/data-fixtures": "1.0.0",
-        "doctrine/doctrine-fixtures-bundle": "2.2.0",
-        "twig/extensions": "1.0.1",
-        "symfony/assetic-bundle": "2.3.0",
-        "symfony/icu": "~1.1",
-        "symfony/swiftmailer-bundle": "2.3.*",
-        "symfony/monolog-bundle": "2.3.0",
-        "sensio/distribution-bundle": "2.3.4",
-        "sensio/framework-extra-bundle": "2.3.4",
-        "sensio/generator-bundle": "2.3.5",
-        "incenteev/composer-parameter-handler": "2.1.0",
-        "jms/job-queue-bundle": "1.1.*",
-        "jms/serializer": "0.14.0",
-        "jms/serializer-bundle": "0.13.0",
-        "kriswallsmith/assetic": "1.1.2",
-        "knplabs/knp-menu": "2.0.0-alpha2",
-        "knplabs/knp-menu-bundle": "2.0.0-alpha2",
-        "friendsofsymfony/rest-bundle": "1.5.0-RC2",
-        "friendsofsymfony/jsrouting-bundle": "1.5.0",
-        "nelmio/api-doc-bundle": "2.7.0",
-        "ass/xmlsecurity": "1.0.0",
-        "besimple/soap": "0.2.2",
-        "stof/doctrine-extensions-bundle": "1.1.0",
-        "escapestudios/wsse-authentication-bundle": "1.0.2",
-        "liip/imagine-bundle": "0.17.*",
-        "leafo/lessphp": "0.4.0",
-        "genemu/form-bundle": "2.2.1",
-        "zendframework/zend-mail": "2.1.5",
-        "a2lix/translation-form-bundle": "1.2",
-        "mtdowling/cron-expression": "1.0.*",
-        "jdare/clank-bundle": "0.1.*",
-        "guzzle/guzzle": "3.7.*",
-        "lexik/maintenance-bundle": "v1.0.3",
-        "sylius/flow-bundle": "0.6.*",
+        "symfony/symfony": "~2.3",
+        "twig/twig": "~1.18",
+        "doctrine/orm": "~2.5",
+        "doctrine/doctrine-bundle": "~1.4.0",
+        "doctrine/dbal": "~2.5",
+        "doctrine/data-fixtures": "~1.1.1",
+        "doctrine/doctrine-fixtures-bundle": "~2.2.0",
+        "twig/extensions": "~1.2",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/icu": "~1.2",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.3",
+        "sensio/distribution-bundle": "~2.3",
+        "sensio/framework-extra-bundle": "~2.3",
+        "sensio/generator-bundle": "~2.3",
+        "incenteev/composer-parameter-handler": "~2.1",
+        "jms/job-queue-bundle": "~1.1",
+        "jms/serializer": "~0.16",
+        "jms/serializer-bundle": "~0.13",
+        "kriswallsmith/assetic": "~1.2",
+        "knplabs/knp-menu": "~2.0",
+        "knplabs/knp-menu-bundle": "~2.0",
+        "friendsofsymfony/rest-bundle": "~1.5",
+        "friendsofsymfony/jsrouting-bundle": "~1.5",
+        "nelmio/api-doc-bundle": "~2.8",
+        "ass/xmlsecurity": "~1",
+        "besimple/soap": "~0.2",
+        "stof/doctrine-extensions-bundle": "~1.1",
+        "escapestudios/wsse-authentication-bundle": "~2.0",
+        "liip/imagine-bundle": "~1.2.6",
+        "leafo/lessphp": "~0.5.0",
+        "genemu/form-bundle": "~2.2",
+        "zendframework/zend-mail": "~2.4",
+        "a2lix/translation-form-bundle": "~2.0",
+        "mtdowling/cron-expression": "~1.0",
+        "jdare/clank-bundle": "~0.1",
+        "guzzle/guzzle": "~3.9",
+        "lexik/maintenance-bundle": "~1.0",
+        "sylius/flow-bundle": "~0.13",
         "composer/composer": "1.0.0-p1",
-        "akeneo/batch-bundle": "~0.3",
-        "luxifer/doctrine-functions": "1.2.1",
-        "nesbot/Carbon": "1.8.*",
-        "monolog/monolog": "1.7.*",
-        "ocramius/proxy-manager": "0.4.*",
-        "knplabs/knp-gaufrette-bundle": "0.1.*",
-        "rhumsaa/uuid": "2.7.*",
-        "oro/doctrine-extensions": "1.0.*",
-        "tinymce/tinymce": "4.1.*",
-        "ezyang/htmlpurifier": "4.6.0",
+        "akeneo/batch-bundle": "~0.4",
+        "luxifer/doctrine-functions": "~1.2",
+        "nesbot/Carbon": "~1.19",
+        "monolog/monolog": "~1.13.1",
+        "ocramius/proxy-manager": "~1.0",
+        "knplabs/knp-gaufrette-bundle": "~0.1",
+        "rhumsaa/uuid": "~2.8",
+        "oro/doctrine-extensions": "~1.0",
+        "tinymce/tinymce": "~4.1",
+        "ezyang/htmlpurifier": "~4.6.0",
         "hwi/oauth-bundle": "~0.3",
-        "components/jquery": "2.1.*",
-        "components/underscore": "1.7.*",
-        "components/backbone": "1.1.*",
+        "components/jquery": "~2.1",
+        "components/underscore": "~1.7",
+        "components/backbone": "~1.1",
         "components/font-awesome": "~4.3.0",
-        "piwik/device-detector": "~3.0"
+        "piwik/device-detector": "~3.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
